[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/End.gd" type="Script" id=1]
[ext_resource path="res://assets/img/Katty2.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Montserrat-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/theme/pensatta-theme.tres" type="Theme" id=5]
[ext_resource path="res://assets/font/Montserrat-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/img/TitleRect.png" type="Texture" id=7]
[ext_resource path="res://assets/img/BubbleTail2.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/ThoughtBubble2.png-8975b7f99465471035aa56a3f9a2c259.stex"

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0.254902, 0.560784, 0.529412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectTitleSprite" type="Sprite" parent="."]
position = Vector2( 0, 40 )
texture = ExtResource( 7 )
centered = false

[node name="TitleLabel" type="Label" parent="RectTitleSprite"]
margin_left = 88.2626
margin_top = 7.93414
margin_right = 507.263
margin_bottom = 58.9341
custom_fonts/font = SubResource( 1 )
text = "Título del problema"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Katty2Sprite" type="Sprite" parent="."]
position = Vector2( 449.505, 470.576 )
texture = ExtResource( 3 )
flip_h = true

[node name="BubbleTailSprite" type="Sprite" parent="."]
position = Vector2( 892.904, 243.793 )
z_index = 1
texture = ExtResource( 8 )

[node name="TailShadowSprite" type="Sprite" parent="BubbleTailSprite"]
modulate = Color( 0.184314, 0.419608, 0.396078, 1 )
position = Vector2( 3.35968, 4.61673 )
z_as_relative = false
texture = ExtResource( 8 )

[node name="BubbleShadow" type="NinePatchRect" parent="."]
modulate = Color( 0.184314, 0.419608, 0.396078, 1 )
margin_left = 895.0
margin_top = 150.0
margin_right = 1383.0
margin_bottom = 370.0
texture = SubResource( 2 )
patch_margin_left = 33
patch_margin_top = 33
patch_margin_right = 33
patch_margin_bottom = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThoughtBubble" type="NinePatchRect" parent="."]
margin_left = 891.0
margin_top = 145.0
margin_right = 1384.0
margin_bottom = 360.0
texture = SubResource( 2 )
patch_margin_left = 33
patch_margin_top = 33
patch_margin_right = 33
patch_margin_bottom = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultLabel" type="Label" parent="ThoughtBubble"]
margin_left = 42.7899
margin_top = 20.2274
margin_right = 272.79
margin_bottom = 68.2274
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "¡Resultado!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummaryLabel" type="Label" parent="ThoughtBubble"]
margin_left = 40.6899
margin_top = 64.982
margin_right = 466.69
margin_bottom = 157.982
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "Resumen de tus respuestas."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishButton" type="Button" parent="."]
margin_left = 992.0
margin_top = 794.0
margin_right = 1366.0
margin_bottom = 841.0
theme = ExtResource( 5 )
text = "FINALIZAR"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="FinishButton" to="." method="_on_FinishButton_pressed"]
